# backend/src/main/java/pl/orzechsoft/tiercalculator/controller/CustomerController.java
@@ -7,14 +7,13 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import pl.orzechsoft.tiercalculator.model.customer.Customer;
 import pl.orzechsoft.tiercalculator.model.customer.CustomerInfo;
+import pl.orzechsoft.tiercalculator.model.customer.GetCustomersResponse;
 import pl.orzechsoft.tiercalculator.model.exception.CustomerDoesNotExistException;
-import pl.orzechsoft.tiercalculator.model.order.OrderInfo;
+import pl.orzechsoft.tiercalculator.model.order.GetOrdersResponse;
 import pl.orzechsoft.tiercalculator.service.ClientMessageService;
 import pl.orzechsoft.tiercalculator.service.CustomerService;
 import pl.orzechsoft.tiercalculator.service.OrderService;
-import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 @RestController
@@ -28,7 +27,7 @@ public class CustomerController {
 
   @GetMapping()
   @Timed("Get customers")
-  Flux<Customer> getCustomers(@RequestParam(defaultValue = "0") int page,
+  Mono<GetCustomersResponse> getCustomers(@RequestParam(defaultValue = "0") int page,
       @RequestParam(defaultValue = "100") int size) {
     return customerService.getAllCustomers(page, size);
   }
@@ -41,12 +40,12 @@ public class CustomerController {
 
   @GetMapping("/{id}/orders")
   @Timed("Get customer orders")
-  Flux<OrderInfo> getCustomerOrders(@PathVariable("id") String id,
+  Mono<GetOrdersResponse> getCustomerOrders(@PathVariable("id") String id,
       @RequestParam(defaultValue = "0") int page,
       @RequestParam(defaultValue = "100") int size) {
     return customerService.getCustomer(id).switchIfEmpty(Mono.error(
             new CustomerDoesNotExistException(
                 clientMessageService.getMessage("customer.does.not.exist", id))))
-        .flatMapMany(customer -> orderService.listOrders(customer, page, size));
+        .flatMap(customer -> orderService.listOrders(customer, page, size));
   }
 }
